<resources>
    <string name="app_name">shop</string>
    <string name="e_mail">E-Mail</string>
    <string name="telefono">Telefono</string>
    <string name="monto_a_pagar">Monto a pagar</string>
    <string name="dni">DNI</string>
    <string name="empresa">Empresa</string>
    <string name="continuar_al_pago">Continuar al pago</string>
    <string name="pagar">Pagar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
</resources>
